Fix callout icon alignment

--- a/theme.css
+++ b/theme.css
@@ -1237,6 +1237,10 @@ body.background-image-enabled {
 .callout.is-collapsible .callout-title {
   cursor: pointer !important;
 }
+.callout-icon {
+  margin-top: unset;
+  align-self: center;
+}
 .callout-icon svg.svg-icon {
   color: rgb(var(--callout-color));
 }
